--- a/nf-core/We.yml
+++ b/nf-core/We.yml
@@ -1,6 +1,6 @@
 extends: existence
 message: "Avoid using first-person plural like '%s'."
-link: https://docs.microsoft.com/en-us/style-guide/grammar/person#avoid-first-person-plural
+link: https://github.com/christopher-hakkaart
 level: warning
 ignorecase: true
 tokens:
