--- a/nf-core/nf-core.yml
+++ b/nf-core/nf-core.yml
@@ -1,10 +1,9 @@
 extends: substitution
-message: Use 'nf-core' instead of '%s'
+message: Use '%s' instead of '%s'
 level: error
-# TODO Maybe later
-# code: false
 ignorecase: false
-# swap maps tokens in form of bad: good
+action:
+  name: replace
 swap:
   # TODO Maybe one day
   # https://github.com/docker/docs/blob/main/.github/vale/Docker/Substitute.yml
