Improve capitalization rules for Nextflow and nf-core
- Add regex pattern to Branding.yml to exclude code contexts
  - Excludes @nf_core (social media handles)
  - Excludes /nf_core/ (file paths)
  - Excludes nf_core. (Python module imports)
- Upgrade Tools.yml Nextflow rule from warning to error level
- Makes capitalization enforcement more accurate and consistent

--- a/nf-core/Branding.yml
+++ b/nf-core/Branding.yml
@@ -5,6 +5,7 @@ link: https://nf-co.re/docs/contributing/guidelines
 action:
   name: replace
 swap:
+  # Excludes @nf_core (social media), /nf_core/ (code paths), nf_core. (Python modules)
+  '(?<![@/])(?<![\w.])nf_core(?![/_.]|@)(?=[\s.,;!?]|$)': nf-core
   "NF-core": nf-core
   "NF_core": nf-core
-  "nf_core": nf-core
